# esp-thread-br

components/esp_ot_br_server/frontend/static/: restful.js
examples/common/thread_border_router/: CMakeLists.txt  Kconfig.projbuild
examples/common/thread_border_router/gui/: ui_boot_animate.c  ui_for_br.c  ui_for_br.h
examples/common/thread_border_router/include/: br_wifi_config.h
examples/common/thread_border_router/src/: border_router_launch.c  br_wifi_config.c
examples/thread_border_router_box/: README.md  partitions.csv  sdkconfig.defaults
examples/thread_border_router_box/main/: idf_component.yml
examples/thread_border_router_box/tools_for_Android/: README.md
examples/thread_border_router_credential_sharing/: sdkconfig.defaults
examples/thread_border_router_credential_sharing/main/: idf_component.yml
